chore: bump version to v0.6.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memorix",
-  "version": "0.6.0",
-  "description": "Cross-Agent Memory Bridge — Universal memory layer for AI coding agents via MCP. Knowledge graph, progressive disclosure search, workspace sync, and auto-memory hooks across Windsurf, Cursor, Claude Code, Codex, Copilot, and Antigravity.",
+  "version": "0.6.1",
+  "description": "Cross-Agent Memory Bridge — Universal memory layer for AI coding agents via MCP. Knowledge graph, progressive disclosure search, workspace sync, and auto-memory hooks across Windsurf, Cursor, Claude Code, Codex, Copilot, Antigravity, and Kiro.",
   "type": "module",
   "sideEffects": false,
   "bin": {
